--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Miroir Salon – Hébergement web</title>
+<title>Prototype – Miroir connecté</title>
 <meta name="color-scheme" content="dark">
 <style>
 :root{ --ui-opacity: 0.82; --radius: 18px; --pad: 16px; --font: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; }
